.gitignore: don;t accidentally ignore some files
The previous first line of .gitignore ("bin/") correctly ignored the
bin/ directory, but it also ignored the git controlled content in
source4/scripting/bin.  The correct line is "/bin/", as explained in
these snippets from the gitignore documentation:

    If the pattern ends with a slash, it is removed for the purpose
    of the following description, but it would only find a match with
    a directory. In other words, foo/ will match a directory foo and
    paths underneath it, but will not match a regular file or a
    symbolic link foo (this is consistent with the way how pathspec
    works in general in Git).

    A leading slash matches the beginning of the pathname. For example,
    "/*.c" matches "cat-file.c" but not "mozilla-sha1/sha1.c".

Signed-off-by: Douglas Bagnall <douglas.bagnall@catalyst.net.nz>
Reviewed-by: Andrew Bartlett <abartlet@samba.org>
Reviewed-by: Garming Sam <garming@catalyst.net.nz>

--- a/.gitignore
+++ b/.gitignore
@@ -1,62 +1,62 @@
-bin/
-st/
+/bin/
+/st/
 .waf*
 .lock-wscript
 *~
 *.swp
-tags
-TAGS
+/tags
+/TAGS
 GPATH
 GRTAGS
 GSYMS
 GTAGS
 cscope*.out
 autom4te.cache
-source3/.clang_complete
+/source3/.clang_complete
 *.patch
 *.pyc
 semantic.cache
-pidl/blib
-pidl/cover_db
-pidl/Makefile
-pidl/pm_to_blib
-pidl/MYMETA.yml
-pidl/MYMETA.json
-packaging/RHEL-CTDB/samba.spec
-packaging/RHEL/samba.spec
-packaging/RHEL/makerpms.sh
-docs-xml/build/catalog.xml
-docs-xml/*/images/*.eps
-docs-xml/*/images/*.pdf
-docs-xml/output
-docs-xml/Samba3-ByExample/images/AccountingNetwork.png
-docs-xml/Samba3-ByExample/images/Charity-Network.png
-docs-xml/Samba3-ByExample/images/UNIX-Samba-and-LDAP.png
-docs-xml/Samba3-ByExample/images/acct2net.png
-docs-xml/Samba3-ByExample/images/ch7-dual-additive-LDAP-Ok.png
-docs-xml/Samba3-ByExample/images/ch7-dual-additive-LDAP.png
-docs-xml/Samba3-ByExample/images/ch7-fail-overLDAP.png
-docs-xml/Samba3-ByExample/images/ch7-singleLDAP.png
-docs-xml/Samba3-ByExample/images/ch8-migration.png
-docs-xml/Samba3-ByExample/images/chap4-net.png
-docs-xml/Samba3-ByExample/images/chap5-net.png
-docs-xml/Samba3-ByExample/images/chap6-net.png
-docs-xml/Samba3-ByExample/images/chap7-idresol.png
-docs-xml/Samba3-ByExample/images/chap9-ADSDC.png
-docs-xml/Samba3-ByExample/images/chap9-SambaDC.png
-docs-xml/Samba3-HOWTO/images/access1.png
-docs-xml/Samba3-HOWTO/images/browsing1.png
-docs-xml/Samba3-HOWTO/images/cups1.png
-docs-xml/Samba3-HOWTO/images/cups2.png
-docs-xml/Samba3-HOWTO/images/domain.png
-docs-xml/Samba3-HOWTO/images/idmap-gid2sid.png
-docs-xml/Samba3-HOWTO/images/idmap-sid2gid.png
-docs-xml/Samba3-HOWTO/images/idmap-sid2uid.png
-docs-xml/Samba3-HOWTO/images/idmap-store-gid2sid.png
-docs-xml/Samba3-HOWTO/images/idmap-uid2sid.png
-docs-xml/Samba3-HOWTO/images/pdftoepsonusb.png
-docs-xml/Samba3-HOWTO/images/pdftosocket.png
-docs-xml/Samba3-HOWTO/images/trusts1.png
+/pidl/blib
+/pidl/cover_db
+/pidl/Makefile
+/pidl/pm_to_blib
+/pidl/MYMETA.yml
+/pidl/MYMETA.json
+/packaging/RHEL-CTDB/samba.spec
+/packaging/RHEL/samba.spec
+/packaging/RHEL/makerpms.sh
+/docs-xml/build/catalog.xml
+/docs-xml/*/images/*.eps
+/docs-xml/*/images/*.pdf
+/docs-xml/output
+/docs-xml/Samba3-ByExample/images/AccountingNetwork.png
+/docs-xml/Samba3-ByExample/images/Charity-Network.png
+/docs-xml/Samba3-ByExample/images/UNIX-Samba-and-LDAP.png
+/docs-xml/Samba3-ByExample/images/acct2net.png
+/docs-xml/Samba3-ByExample/images/ch7-dual-additive-LDAP-Ok.png
+/docs-xml/Samba3-ByExample/images/ch7-dual-additive-LDAP.png
+/docs-xml/Samba3-ByExample/images/ch7-fail-overLDAP.png
+/docs-xml/Samba3-ByExample/images/ch7-singleLDAP.png
+/docs-xml/Samba3-ByExample/images/ch8-migration.png
+/docs-xml/Samba3-ByExample/images/chap4-net.png
+/docs-xml/Samba3-ByExample/images/chap5-net.png
+/docs-xml/Samba3-ByExample/images/chap6-net.png
+/docs-xml/Samba3-ByExample/images/chap7-idresol.png
+/docs-xml/Samba3-ByExample/images/chap9-ADSDC.png
+/docs-xml/Samba3-ByExample/images/chap9-SambaDC.png
+/docs-xml/Samba3-HOWTO/images/access1.png
+/docs-xml/Samba3-HOWTO/images/browsing1.png
+/docs-xml/Samba3-HOWTO/images/cups1.png
+/docs-xml/Samba3-HOWTO/images/cups2.png
+/docs-xml/Samba3-HOWTO/images/domain.png
+/docs-xml/Samba3-HOWTO/images/idmap-gid2sid.png
+/docs-xml/Samba3-HOWTO/images/idmap-sid2gid.png
+/docs-xml/Samba3-HOWTO/images/idmap-sid2uid.png
+/docs-xml/Samba3-HOWTO/images/idmap-store-gid2sid.png
+/docs-xml/Samba3-HOWTO/images/idmap-uid2sid.png
+/docs-xml/Samba3-HOWTO/images/pdftoepsonusb.png
+/docs-xml/Samba3-HOWTO/images/pdftosocket.png
+/docs-xml/Samba3-HOWTO/images/trusts1.png
 .testrepository
-bin/.confcache/*/*
-bin/.conf_check_*/*
+/bin/.confcache/*/*
+/bin/.conf_check_*/*
