travis: run the samba-o3 target
Signed-off-by: Michael Adam <obnox@samba.org>
Reviewed-by: Andrew Bartlett <abartlet@samba.org>

Autobuild-User(master): Michael Adam <obnox@samba.org>
Autobuild-Date(master): Fri May 13 13:46:12 CEST 2016 on sn-devel-144

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ env:
   - TASK=samba-ctdb
   - TASK=samba-libs
   - TASK=samba-static
+  - TASK=samba-o3
   - TASK=ldb
   - TASK=tdb
   - TASK=talloc
