--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -106,3 +106,8 @@ build_samba_buildpy3_only:
   <<: *shared_template
   script:
     - python3 script/autobuild.py samba-buildpy3-only             --verbose --nocleanup --keeplogs --tail --testbase /tmp/samba-testbase
+
+build_samba_purepy3-none_env:
+  <<: *shared_template
+  script:
+    - python3 script/autobuild.py samba-purepy3-none-env           --verbose --nocleanup --keeplogs --tail --testbase /tmp/samba-testbase
