gitlab-ci: Use artifacts instead of after_script
Signed-off-by: Andreas Schneider <asn@samba.org>
Reviewed-by: Andrew Bartlett <abartlet@samba.org>

Autobuild-User(master): Andrew Bartlett <abartlet@samba.org>
Autobuild-Date(master): Sat Jan 26 22:16:38 CET 2019 on sn-devel-144

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,8 +20,14 @@ variables:
         sudo mkswap /samba-swap;
         sudo swapon /samba-swap;
       fi
-  after_script:
-    - tar -xf logs.tar.gz system-info.txt -O
+  artifacts:
+    expire_in: 1 week
+    when: on_failure
+    paths:
+      - "*.stdout"
+      - "*.stderr"
+      - system-info.txt
+      - /tmp/samba-testbase/*/*/bin/config.log
 
 build_samba_none_env:
   <<: *shared_template
