--- a/.gitlab-ci-private.yml
+++ b/.gitlab-ci-private.yml
@@ -20,6 +20,12 @@ build_samba_py3:
     # this one takes about 4 hours to finish
     - python script/autobuild.py samba-py3        --verbose --nocleanup --keeplogs --tail --testbase /tmp/samba-testbase
 
+build_samba_purepy3:
+  <<: *private_template
+  script:
+    # this one takes about 4 hours to finish
+    - python3 script/autobuild.py samba-purepy3        --verbose --nocleanup --keeplogs --tail --testbase /tmp/samba-testbase
+
 build_samba_nt4:
   <<: *private_template
   script:
@@ -31,6 +37,12 @@ build_samba_nt4_py3:
   script:
     # this one takes about 1 hours to finish
     - python script/autobuild.py samba-nt4-py3    --verbose --nocleanup --keeplogs --tail --testbase /tmp/samba-testbase
+
+build_purepy3_nt4:
+  <<: *private_template
+  script:
+    # this one takes about 1 hours to finish
+    - python3 script/autobuild.py samba-purepy3-nt4 --verbose --nocleanup --keeplogs --tail --testbase /tmp/samba-testbase
 
 build_samba_fileserver:
   <<: *private_template
