--- a/.gitlab-ci-private.yml
+++ b/.gitlab-ci-private.yml
@@ -12,17 +12,17 @@ build_samba:
   <<: *private_template
   script:
     # this one takes about 4 hours to finish
-    - python script/autobuild.py samba            --verbose --nocleanup --keeplogs --tail --testbase /tmp/samba-testbase
+    - python3 script/autobuild.py samba            --verbose --nocleanup --keeplogs --tail --testbase /tmp/samba-testbase
 
 build_samba_fileserver:
   <<: *private_template
   script:
     # this one takes about 1 hours to finish
-    - python script/autobuild.py samba-fileserver --verbose --nocleanup --keeplogs --tail --testbase /tmp/samba-testbase
+    - python3 script/autobuild.py samba-fileserver --verbose --nocleanup --keeplogs --tail --testbase /tmp/samba-testbase
 
 build_samba_ad_dc:
   <<: *private_template
   script:
     # this one takes about 1 hours to finish
-    - python script/autobuild.py samba-ad-dc     --verbose --nocleanup --keeplogs --tail --testbase /tmp/samba-testbase
+    - python3 script/autobuild.py samba-ad-dc     --verbose --nocleanup --keeplogs --tail --testbase /tmp/samba-testbase
 
