--- a/.gitlab-ci-private.yml
+++ b/.gitlab-ci-private.yml
@@ -14,6 +14,12 @@ build_samba:
     # this one takes about 4 hours to finish
     - python3 script/autobuild.py samba            --verbose --nocleanup --keeplogs --tail --testbase /tmp/samba-testbase
 
+build_samba_py2:
+  <<: *private_template
+  script:
+    # this one takes about 4 hours to finish
+    - script/autobuild.py samba-py2            --verbose --nocleanup --keeplogs --tail --testbase /tmp/samba-testbase
+
 build_samba_fileserver:
   <<: *private_template
   script:
@@ -25,4 +31,11 @@ build_samba_ad_dc:
   script:
     # this one takes about 1 hours to finish
     - python3 script/autobuild.py samba-ad-dc     --verbose --nocleanup --keeplogs --tail --testbase /tmp/samba-testbase
+
+
+build_samba_ad_dc_py2:
+  <<: *private_template
+  script:
+    # this one takes about 1 hours to finish
+    - script/autobuild.py samba-ad-dc-py2     --verbose --nocleanup --keeplogs --tail --testbase /tmp/samba-testbase
 
