--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,6 +29,12 @@ build_samba_none_env:
     # this one takes about 1 hours to finish
     - python3 script/autobuild.py samba-none-env    --verbose --nocleanup --keeplogs --tail --testbase /tmp/samba-testbase
 
+build_samba_none_env_py2:
+  <<: *shared_template
+  script:
+    # this one takes about 1 hours to finish
+    - script/autobuild.py samba-none-env-py2    --verbose --nocleanup --keeplogs --tail --testbase /tmp/samba-testbase
+
 build_samba_nopython:
   <<: *shared_template
   script:
@@ -55,10 +61,21 @@ build_samba_ad_dc_2:
     # this one takes about 1 hours to finish
     - python3 script/autobuild.py samba-ad-dc-2     --verbose --nocleanup --keeplogs --tail --testbase /tmp/samba-testbase
 
+build_samba_ad_dc_2_py2:
+  <<: *shared_template
+  script:
+    # this one takes about 1 hours to finish
+    - script/autobuild.py samba-ad-dc-2-py2     --verbose --nocleanup --keeplogs --tail --testbase /tmp/samba-testbase
+
 build_samba_libs:
   <<: *shared_template
   script:
     - python3 script/autobuild.py samba-libs       --verbose --nocleanup --keeplogs --tail --testbase /tmp/samba-testbase
+
+build_samba_libs_py2:
+  <<: *shared_template
+  script:
+    - python3 script/autobuild.py samba-libs-py2       --verbose --nocleanup --keeplogs --tail --testbase /tmp/samba-testbase
 
 build_samba_static:
   <<: *shared_template
