CI: move target "build_nt4" to private gitlab runners
Fixes the mistake of 574fdfae59c6d7c97be48ca52ac9aefac82feccd that added
"build_nt4" to the public runners.

BUG: https://bugzilla.samba.org/show_bug.cgi?id=13761

Signed-off-by: Ralph Boehme <slow@samba.org>
Reviewed-by: Tim Beale <timbeale@catalyst.net.nz>

Autobuild-User(master): Tim Beale <timbeale@samba.org>
Autobuild-Date(master): Thu Jan 24 02:45:09 CET 2019 on sn-devel-144

--- a/.gitlab-ci-private.yml
+++ b/.gitlab-ci-private.yml
@@ -39,3 +39,7 @@ build_samba_ad_dc_py2:
     # this one takes about 1 hours to finish
     - script/autobuild.py samba-ad-dc-py2     --verbose --nocleanup --keeplogs --tail --testbase /tmp/samba-testbase
 
+build_nt4:
+  <<: *private_template
+  script:
+    - script/autobuild.py samba-nt4 --verbose --nocleanup --keeplogs --tail --testbase /tmp/samba-testbase
