--- a/.gitlab-ci-private.yml
+++ b/.gitlab-ci-private.yml
@@ -8,38 +8,38 @@ include:
     - docker
     - private
 
-build_samba:
+samba:
   <<: *private_template
   script:
     # this one takes about 4 hours to finish
     - script/autobuild.py samba            --verbose --nocleanup --keeplogs --tail --testbase /tmp/samba-testbase
 
-build_samba_py2:
+samba_py2:
   <<: *private_template
   script:
     # this one takes about 4 hours to finish
     - script/autobuild.py samba-py2            --verbose --nocleanup --keeplogs --tail --testbase /tmp/samba-testbase
 
-build_samba_fileserver:
+samba_fileserver:
   <<: *private_template
   script:
     # this one takes about 1 hours to finish
     - script/autobuild.py samba-fileserver --verbose --nocleanup --keeplogs --tail --testbase /tmp/samba-testbase
 
-build_samba_ad_dc:
+samba_ad_dc:
   <<: *private_template
   script:
     # this one takes about 1 hours to finish
     - script/autobuild.py samba-ad-dc     --verbose --nocleanup --keeplogs --tail --testbase /tmp/samba-testbase
 
 
-build_samba_ad_dc_py2:
+samba_ad_dc_py2:
   <<: *private_template
   script:
     # this one takes about 1 hours to finish
     - script/autobuild.py samba-ad-dc-py2     --verbose --nocleanup --keeplogs --tail --testbase /tmp/samba-testbase
 
-build_nt4:
+nt4:
   <<: *private_template
   script:
     - script/autobuild.py samba-nt4 --verbose --nocleanup --keeplogs --tail --testbase /tmp/samba-testbase
