.gitlab-ci.yml: Use .extends to avoid duplication of autobuild command
This should make our .gitlab-ci.yml file much less overwealming.

The downside is that $CI_JOB_NAME is printed rather than the job name
in the log, but the upside is that the names must now strictly match.

Signed-off-by: Andrew Bartlett <abartlet@samba.org>
Reviewed-by: Tim Beale <timbeale@catalyst.net.nz>

--- a/.gitlab-ci-private.yml
+++ b/.gitlab-ci-private.yml
@@ -16,36 +16,23 @@ include:
 
 samba:
   extends: .private_template
-  script:
     # this one takes about 4 hours to finish
-    - script/autobuild.py samba            --verbose --nocleanup --keeplogs --tail --testbase /tmp/samba-testbase
 
-samba_py2:
+samba-py2:
   extends: .private_template
-  script:
     # this one takes about 4 hours to finish
-    - script/autobuild.py samba-py2            --verbose --nocleanup --keeplogs --tail --testbase /tmp/samba-testbase
 
-samba_fileserver:
+samba-fileserver:
   extends: .private_template
-  script:
     # this one takes about 1 hours to finish
-    - script/autobuild.py samba-fileserver --verbose --nocleanup --keeplogs --tail --testbase /tmp/samba-testbase
 
-samba_ad_dc:
+samba-ad-dc:
   extends: .private_template
-  script:
     # this one takes about 1 hours to finish
-    - script/autobuild.py samba-ad-dc     --verbose --nocleanup --keeplogs --tail --testbase /tmp/samba-testbase
 
-
-samba_ad_dc_py2:
+samba-ad-dc-py2:
   extends: .private_template
-  script:
     # this one takes about 1 hours to finish
-    - script/autobuild.py samba-ad-dc-py2     --verbose --nocleanup --keeplogs --tail --testbase /tmp/samba-testbase
 
-nt4:
+samba-nt4:
   extends: .private_template
-  script:
-    - script/autobuild.py samba-nt4 --verbose --nocleanup --keeplogs --tail --testbase /tmp/samba-testbase
