--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -39,80 +39,8 @@ variables:
     when:
       - runner_system_failure
       - stuck_or_timeout_failure
-
-samba_none_env:
-  extends: .shared_template
   script:
-    # this one takes about 1 hours to finish
-    - script/autobuild.py samba-none-env    --verbose --nocleanup --keeplogs --tail --testbase /tmp/samba-testbase
-
-samba_none_env_py2:
-  extends: .shared_template
-  script:
-    # this one takes about 1 hours to finish
-    - script/autobuild.py samba-none-env-py2    --verbose --nocleanup --keeplogs --tail --testbase /tmp/samba-testbase
-
-samba_nopython:
-  extends: .shared_template
-  script:
-    - script/autobuild.py samba-nopython   --verbose --nocleanup --keeplogs --tail --testbase /tmp/samba-testbase
-
-samba_systemkrb5:
-  extends: .shared_template
-  script:
-    - script/autobuild.py samba-systemkrb5 --verbose --nocleanup --keeplogs --tail --testbase /tmp/samba-testbase
-
-samba_xc:
-  extends: .shared_template
-  script:
-    - script/autobuild.py samba-xc         --verbose --nocleanup --keeplogs --tail --testbase /tmp/samba-testbase
-
-samba_o3:
-  extends: .shared_template
-  script:
-    - script/autobuild.py samba-o3         --verbose --nocleanup --keeplogs --tail --testbase /tmp/samba-testbase
-
-samba_ad_dc_2:
-  extends: .shared_template
-  script:
-    # this one takes about 1 hours to finish
-    - script/autobuild.py samba-ad-dc-2     --verbose --nocleanup --keeplogs --tail --testbase /tmp/samba-testbase
-
-samba_ad_dc_backup:
-  extends: .shared_template
-  script:
-    - script/autobuild.py samba-ad-dc-backup    --verbose --nocleanup --keeplogs --tail --testbase /tmp/samba-testbase
-
-samba_ad_dc_2_py2:
-  extends: .shared_template
-  script:
-    # this one takes about 1 hours to finish
-    - script/autobuild.py samba-ad-dc-2-py2     --verbose --nocleanup --keeplogs --tail --testbase /tmp/samba-testbase
-
-samba_libs:
-  extends: .shared_template
-  script:
-    - script/autobuild.py samba-libs       --verbose --nocleanup --keeplogs --tail --testbase /tmp/samba-testbase
-
-samba_libs_py2:
-  extends: .shared_template
-  script:
-    - script/autobuild.py samba-libs-py2       --verbose --nocleanup --keeplogs --tail --testbase /tmp/samba-testbase
-
-samba_static:
-  extends: .shared_template
-  script:
-    - script/autobuild.py samba-static     --verbose --nocleanup --keeplogs --tail --testbase /tmp/samba-testbase
-
-ctdb:
-  extends: .shared_template
-  script:
-    - script/autobuild.py ctdb       --verbose --nocleanup --keeplogs --tail --testbase /tmp/samba-testbase
-
-samba_ctdb:
-  extends: .shared_template
-  script:
-    - script/autobuild.py samba-ctdb             --verbose --nocleanup --keeplogs --tail --testbase /tmp/samba-testbase
+    - script/autobuild.py $CI_JOB_NAME    --verbose --nocleanup --keeplogs --tail --testbase /tmp/samba-testbase
 
 others:
   extends: .shared_template
@@ -124,18 +52,58 @@ others:
     - script/autobuild.py tdb              --verbose --nocleanup --keeplogs --tail --testbase /tmp/samba-testbase
     - script/autobuild.py tevent           --verbose --nocleanup --keeplogs --tail --testbase /tmp/samba-testbase
 
-samba_buildpy2_only:
+samba-none-env:
   extends: .shared_template
-  script:
-    - python script/autobuild.py samba-buildpy2-only             --verbose --nocleanup --keeplogs --tail --testbase /tmp/samba-testbase
+    # this one takes about 1 hours to finish
 
-samba_ad_dc_ntvfs:
+samba-none-env-py2:
   extends: .shared_template
-  script:
+    # this one takes about 1 hours to finish
+
+samba-nopython:
+  extends: .shared_template
+
+samba-systemkrb5:
+  extends: .shared_template
+
+samba-xc:
+  extends: .shared_template
+
+samba-o3:
+  extends: .shared_template
+
+samba-ad-dc-2:
+  extends: .shared_template
+    # this one takes about 1 hours to finish
+
+samba-ad-dc-backup:
+  extends: .shared_template
+
+samba-ad-dc-2-py2:
+  extends: .shared_template
+    # this one takes about 1 hours to finish
+
+samba-libs:
+  extends: .shared_template
+
+samba-libs-py2:
+  extends: .shared_template
+
+samba-static:
+  extends: .shared_template
+
+ctdb:
+  extends: .shared_template
+
+samba-ctdb:
+  extends: .shared_template
+
+samba-buildpy2-only:
+  extends: .shared_template
+
+samba-ad-dc-ntvfs:
+  extends: .shared_template
     # this one takes about 100 mins to finish
-    - script/autobuild.py samba-ad-dc-ntvfs --verbose --nocleanup --keeplogs --tail --testbase /tmp/samba-testbase
 
-samba_ad_dc_ntvfs_py2:
+samba-ad-dc-ntvfs-py2:
   extends: .shared_template
-  script:
-    - script/autobuild.py samba-ad-dc-ntvfs-py2 --verbose --nocleanup --keeplogs --tail --testbase /tmp/samba-testbase
