.gitlab-ci.yml: Make docker image name more explicit
The 'image' YAML tag implies a docker image, but for people who find
gitlab mysterious, let's make it blatantly obvious what we're doing
here.

+ added a comment
+ added 'DOCKER' to the variable names
+ removed 'BUILD', as we've now dropped this from all the job-names
+ tried to make the variable names consistent, both within the file and
WRT docker terminology

Signed-off-by: Tim Beale <timbeale@catalyst.net.nz>
Reviewed-by: Andrew Bartlett <abartlet@samba.org>

Autobuild-User(master): Andrew Bartlett <abartlet@samba.org>
Autobuild-Date(master): Thu Feb 14 03:51:21 CET 2019 on sn-devel-144

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,14 +2,16 @@
 
 
 variables:
-  SAMBA_BUILD_GITLAB_CI_REGISTRY: registry.gitlab.com
-  SAMBA_BUILD_IMAGES_PROJECT: samba-team/samba
-  SAMBA_BUILD: latest
+  # we run autobuild.py inside a samba CI docker image located on gitlab's registry
+  SAMBA_CI_DOCKER_REGISTRY: registry.gitlab.com
+  SAMBA_CI_DOCKER_NAME: samba-team/samba
+  SAMBA_CI_DOCKER_TAG: latest
+  SAMBA_CI_DOCKER_IMAGE: $SAMBA_CI_DOCKER_REGISTRY/$SAMBA_CI_DOCKER_NAME:$SAMBA_CI_DOCKER_TAG
   GIT_STRATEGY: fetch
   GIT_DEPTH: "3"
 
 .shared_template:
-  image: $SAMBA_BUILD_GITLAB_CI_REGISTRY/$SAMBA_BUILD_IMAGES_PROJECT:$SAMBA_BUILD
+  image: $SAMBA_CI_DOCKER_IMAGE
   stage: build
   tags:
     - docker
